# ta-tool

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  ta_config.toml.example
ta_tool/: cli.py
ta_tool/commands/: debug.py  office.py  reply.py  rubric.py  stats.py  triage.py
ta_tool/core/: config.py  file_utils.py  llm.py  parser.py
