[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ta-tool"
version = "0.1.0"
description = "CLI toolkit for Teaching Assistants"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "anthropic>=0.28",
    "diskcache>=5.6",
    "pandas>=2.0",
    "numpy>=1.26",
]

[project.scripts]
ta = "ta_tool.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ta_tool*"]
